# CS410-2024

./: README.md
courseworks/: 00-Install.agda  01-Cellular.agda  02-Tiling.agda  Makefile  Tiling.cabal
lectures/: 01-Holey.agda  01-Lecture.agda  03-Lecture.agda  04-Holey.agda  04-Lecture.agda  05-Holey.agda  05-Lecture.agda  06-Holey.agda  06-Lecture.agda  07-Holey.agda  07-Lecture.agda  08-Holey.agda  08-Lecture.agda  09-Holey.agda  09-Lecture.agda  10-Holey.agda  10-Lecture.agda  11-Holey.agda  11-Lecture.agda  11-Lecture.hs  12-Holey.agda  12-Lecture.agda  13-Holey.agda  13-Lecture.agda  14-Holey.agda  14-Lecture.agda  Lecture1.agda
lectures/Category/: Category.agda  Solver.agda
